Closed
Bug 656411
Opened 14 years ago
Closed 14 years ago
TI+JM: Assertion failure: !unknown(), at ../jsinferinlines.h:1132
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
Got this assert this morning but took some time to reduce, crashes after ~5 seconds.
--
for (var i = 0; i<5000; i++) {
gc();
(function () {
var x = new Date(0);
x.getTime();
x.getTime();
x.getTime();
})();
}
--
$ ./js -n -a -m test.js
Assertion failure: !unknown(), at ../jsinferinlines.h:1132
Revision 2178344055f5, 32-bit OS X.
Comment 1•14 years ago
|
||
testSingletonPropertyTypes was inspecting the contents of a type set without having first checked whether it was unknown (only type sets with known contents can be examined).
http://hg.mozilla.org/projects/jaegermonkey/rev/498ea6c749f4
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•