[INFER] Check types->unknown() before inspecting other contents in testSingletonPropertyTypes, bug 656411.